# insight

./: .gitignore  CONTRIBUTING.md  IDENTITY_RESOLUTION_V3.md  README.md  TASKS.md  dev-compose.sh  dev-up.sh  docker-compose.yml  down.sh  insight-front_symlink  restart.sh  up-orb.sh  up.sh
.github/workflows/: build-images.yml  ingestion-checks.yml
charts/insight/: Chart.yaml  values.schema.json  values.yaml
compose/seed/: profiles.py
compose/seed/generators/: task.py
cypilot/config/: artifacts.toml
docs/: CONNECTORS_REFERENCE.md
docs/connectors/git/: README.md
docs/connectors/hr-directory/: README.md
docs/domain/: README.md
docs/domain/connector/: README.md
docs/domain/ingestion/: README.md
docs/domain/org-chart/: README.md
docs/domain/person/: README.md
docs/shared/glossary/: README.md
inbox/: IDENTITY_RESOLUTION.md
k8s/: kind-config.yaml
src/backend/: Cargo.toml
src/backend/libs/insight-clickhouse/: Cargo.toml
src/backend/libs/insight-clickhouse/src/: config.rs  error.rs  lib.rs  query.rs
src/backend/plugins/oidc-authn-plugin/: Cargo.toml  README.md
src/backend/plugins/oidc-authn-plugin/src/: config.rs  lib.rs  module.rs
src/backend/plugins/oidc-authn-plugin/src/domain/: client.rs  service.rs
src/backend/services/: LOCAL_DEV.md
src/backend/services/analytics-api/helm/: Chart.yaml  values.yaml
src/backend/services/analytics-api/helm/templates/: deployment.yaml  secret.yaml
src/backend/services/analytics-api/src/: config.rs  main.rs
src/backend/services/analytics-api/src/api/: catalog.rs  error.rs  handlers.rs  mod.rs
src/backend/services/analytics-api/src/domain/: mod.rs  query.rs
src/backend/services/analytics-api/src/domain/catalog/: live_tests.rs  mod.rs  reader.rs  resolver.rs  response.rs
src/backend/services/analytics-api/src/domain/schema_validator/: live_tests.rs
src/backend/services/analytics-api/src/infra/cache/: catalog_cache.rs  live_tests.rs  mod.rs
src/backend/services/analytics-api/src/migration/: m20260417_000001_seed_metrics.rs  m20260522_000001_metric_catalog.rs
src/backend/services/api-gateway/: Cargo.toml  Dockerfile  README.md
src/backend/services/api-gateway/config/: insight.yaml  no-auth.yaml
src/backend/services/api-gateway/helm/: Chart.yaml  values.yaml
src/backend/services/api-gateway/helm/templates/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/backend/services/api-gateway/src/: auth_info.rs  core_types.rs  main.rs
src/backend/services/claude-team-proxy/: .gitignore  package-lock.json  package.json
src/backend/services/claude-team-proxy/src/: config.js  index.js  log.js  server.js
src/backend/services/claude-team-proxy/src/transport/: index.js  playwright.js
src/backend/services/identity/helm/: Chart.yaml
src/backend/services/identity/seed/: seed-persons-from-identity-input.py  smoke-orgchart-visibility.sh
src/backend/services/identity/src/: people.rs
src/backend/services/identity/src/Insight.Identity.Api/: Program.cs
src/backend/services/identity/src/Insight.Identity.Api/Auth/: HeaderCallerContext.cs  HeaderTenantContext.cs  JwtTenantContext.cs
src/backend/services/identity/src/Insight.Identity.Api/Background/: PersonsSeedQueue.cs  PersonsSeedWorker.cs
src/backend/services/identity/src/Insight.Identity.Api/Contracts/: PersonsSeedContracts.cs  SubchartNodeResponse.cs
src/backend/services/identity/src/Insight.Identity.Api/Endpoints/: PersonsEndpoints.cs  PersonsSeedEndpoints.cs  SubchartEndpoints.cs
src/backend/services/identity/src/Insight.Identity.Domain/: SubchartNode.cs
src/backend/services/identity/src/Insight.Identity.Domain/Services/: IPersonsReader.cs  ISubchartReader.cs  IVisibilityReader.cs  PersonLookupService.cs  SubchartService.cs  VisibilityService.cs
src/backend/services/identity/src/Insight.Identity.Infrastructure/MariaDb/: PersonsRepository.cs  RolesRepository.cs  Sql.OrgChart.cs  Sql.Roles.cs  Sql.Subchart.cs  Sql.Visibility.cs  SubchartRepository.cs  VisibilityRepository.cs
src/backend/services/identity/src/migration/: m20260421_000001_persons.rs
src/backend/services/identity/tests/Insight.Identity.Tests.Integration/: JwtCallerResolveTests.cs  OrgChartVisibilityEndpointsTests.cs  OrgTreeEndpointTests.cs  OrgTreeLookupTests.cs  PersonsEndpointTests.cs  PersonsSeedEndToEndTests.cs  SubchartEndpointTests.cs  VisibilityGateTests.cs
src/backend/services/identity/tests/Insight.Identity.Tests.Unit/: HeaderCallerContextTests.cs  PersonForestTests.cs  ProfileLookupServiceTests.cs
src/frontend/: Dockerfile
src/frontend/helm/: Chart.yaml  values.yaml
src/ingestion/: .dockerignore  MONITORING.md  README.md  down.sh  logs.sh  run-init.sh  run-sync.sh  run-tt-enrich-jira.sh  sync-all.sh  up.sh  update-connections.sh  update-connectors.sh
src/ingestion/airbyte-toolkit/: build-connector.sh  register.sh
src/ingestion/connections/: example-tenant.yaml.example
src/ingestion/connectors/git/github-v2/: Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/github-v2/source_github_v2/: queries.py  source.py  spec.json
src/ingestion/connectors/git/github-v2/source_github_v2/streams/: __init__.py  base.py  branches.py  comments.py  commits.py  file_changes.py  pr_commits.py  pull_requests.py  repositories.py  review_comments.py  reviews.py
streams/stream_task_tracker/: task_tracker.md
(+228 files in other folders)
