[workspace]
members = [
    "libs/insight-clickhouse",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Cyber Fabric"]
repository = "https://github.com/cyberfabric/insight"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_mut = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"

[workspace.dependencies]
# ClickHouse client
clickhouse = { version = "0.14", features = ["uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# IDs and time
uuid = { version = "1.19", features = ["serde", "v7"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging
tracing = "0.1"
